tools/ncp-local-cluster/apps/envoy-gateway/gateway-grpc.yaml
# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: api-grpc-gw
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      protocol: HTTP
      port: 9090
      allowedRoutes:
        namespaces:
          from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: grpc-gw
  namespace: envoy-gateway-system
spec:
  gatewayClassName: eg
  listeners:
    - name: tcp
      protocol: TCP
      port: 10081
      allowedRoutes:
        namespaces:
          from: All
    - name: worker-tcp
      protocol: TCP
      port: 10086
      allowedRoutes:
        namespaces:
          from: All
    - name: llm-grpc
      protocol: HTTPS
      port: 50071
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: llm-request-router-grpc-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: llm-quic
      protocol: UDP
      port: 50072
      allowedRoutes:
        namespaces:
          from: All
